# RPGDemo

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
assets/shaders/: quad.frag  quad.vert
assets/textures/: texture_atlas.aseprite
src/: EngineLibrary.h  assets.h  game.cpp  game.h  input.h  main.cpp  math.h  platform.h  renderer_interface.h  win32_platform.cpp
